Added some images and adding a click event for each square. Corrected some code to make squares coordinates right

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="scss/style.css">
+	<script type="module" src="js/dataStructures.js"></script>
 	<title>Chess Engine</title>
 </head>
 <body>
@@ -10,5 +11,6 @@
 	<div id="grid"></div>
 	
 	<script src="js/initialize.js"></script>
+	<script src="js/user.js"></script>
 </body>
 </html>
